Fix usage of layout types in platform code https://bugs.webkit.org/show_bug.cgi?id=85392

Reviewed by Eric Seidel.

Source/WebCore:

No new tests, no change in functionality.

* page/EventHandler.cpp:
(WebCore::EventHandler::handleGestureTap):
Use rounded point for gestures as event handling is still mostly int based.

Source/WebKit/chromium:

* src/WebHitTestResult.cpp:
(WebKit::WebHitTestResult::localPoint):
* src/WebSurroundingText.cpp:
(WebKit::WebSurroundingText::initialize):
Explicitly cast WebPoint to IntPoint to avoid ambiguous conversion error.

Source/WebKit/efl:

* ewk/ewk_frame.cpp:
(ewk_frame_focused_element_geometry_get):
* ewk/ewk_view.cpp:
(_Ewk_View_Private_Data):
(ewk_view_scale_set):

Source/WebKit2:

* WebProcess/WebCoreSupport/WebGraphicsLayer.cpp:
(WebCore::WebGraphicsLayer::tiledBackingStoreVisibleRect):
Use enclosingIntRect to convert visible rect for transform results to
line up with device pixels.

* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::editorState):
Use pixelSnapped rect for editor rect calculation as it represents a
device coordinate.


Canonical link: https://commits.webkit.org/102956@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@115877 268f45cc-cd09-0410-ab3c-d52691b4dbfc